--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,57 @@ permissions:
   pull-requests: write
 
 jobs:
+  lint:
+    name: Python Linting
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install ruff
+        run: |
+          python -m pip install --upgrade pip
+          pip install ruff
+
+      - name: Run ruff check
+        run: |
+          ruff check lambda/
+
+      - name: Run ruff format check
+        run: |
+          ruff format --check lambda/
+
+      - name: Comment PR with Linting Results
+        if: github.event_name == 'pull_request' && failure()
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const output = `#### Python Linting Failed ❌
+
+            **Ruff linting or formatting checks failed.**
+
+            Please run the following commands locally to fix:
+            - \`ruff check --fix lambda/\`
+            - \`ruff format lambda/\`
+
+            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            });
+
   scheduler-tests:
+    needs: lint
     name: Scheduler Lambda Tests
     runs-on: ubuntu-latest
 
@@ -74,6 +124,7 @@ jobs:
             });
 
   purchaser-tests:
+    needs: lint
     name: Purchaser Lambda Tests
     runs-on: ubuntu-latest
 
