Add go mod tidy to workflow to generate go.sum

--- a/.github/workflows/terraform-integration-tests.yml
+++ b/.github/workflows/terraform-integration-tests.yml
@@ -68,6 +68,7 @@ jobs:
       - name: Download Go modules
         working-directory: terraform-tests/integration
         run: |
+          go mod tidy
           go mod download
           go mod verify
 
