--- a/lambda/purchaser/pytest.ini
+++ b/lambda/purchaser/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 testpaths = tests
-python_files = test_integration.py
+python_files = test_integration.py test_validation.py test_notifications.py
 python_classes = Test*
 python_functions = test_*
 addopts =
@@ -10,4 +10,4 @@ addopts =
     --cov-report=term-missing
     --cov-report=html
     --cov-report=xml
-    --cov-fail-under=75
+    --cov-fail-under=79
