Rename coverage.py to coverage_calculator.py to avoid pytest-cov conflict
- Renamed scheduler/coverage.py to scheduler/coverage_calculator.py
- Updated all importlib references in handler.py and test files
- Re-enabled coverage collection for Scheduler tests
- Added test_coverage.py back to test suite (119 tests total for Scheduler)

This resolves the module naming conflict with pytest-cov's coverage package.

--- a/lambda/scheduler/pytest.ini
+++ b/lambda/scheduler/pytest.ini
@@ -1,7 +1,12 @@
 [pytest]
 testpaths = tests
-python_files = test_handler.py test_purchase_calculator.py test_recommendations.py
+python_files = test_handler.py test_purchase_calculator.py test_recommendations.py test_coverage.py
 python_classes = Test*
 python_functions = test_*
 addopts =
     -v
+    --cov=.
+    --cov-report=term-missing
+    --cov-report=html
+    --cov-report=xml
+    --cov-fail-under=75
