Use pytest.ini configuration instead of overriding in workflow
Changed pytest command from explicit coverage arguments to simple 'pytest':
- Removed: --cov=. --cov-report=term-missing --cov-report=xml --cov-fail-under=80
- Now uses: pytest (which respects pytest.ini configuration)

This allows each Lambda to have its own coverage threshold:
- Purchaser: 70% (6 integration tests)
- Reporter: 40% (7 essential tests)
- Scheduler: 75% (119 tests)

Instead of forcing 80% across all Lambdas.

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -203,7 +203,7 @@ jobs:
           PYTHONPATH: ${{ github.workspace }}/lambda
           AWS_DEFAULT_REGION: us-east-1
         run: |
-          pytest -v --cov=. --cov-report=term-missing --cov-report=xml --cov-fail-under=80
+          pytest
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
@@ -263,7 +263,7 @@ jobs:
           PYTHONPATH: ${{ github.workspace }}/lambda
           AWS_DEFAULT_REGION: us-east-1
         run: |
-          pytest -v --cov=. --cov-report=term-missing --cov-report=xml --cov-fail-under=80
+          pytest
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
@@ -323,7 +323,7 @@ jobs:
           PYTHONPATH: ${{ github.workspace }}/lambda
           AWS_DEFAULT_REGION: us-east-1
         run: |
-          pytest -v --cov=. --cov-report=term-missing --cov-report=xml --cov-fail-under=80
+          pytest
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
