feat: Add comprehensive unit tests for simple strategy
- Create test_simple_strategy.py with 17 test cases
- Test all SP types (compute, database, sagemaker) individually
- Test edge cases: no gap, no recommendation, zero commitment
- Test multiple SP types enabled simultaneously
- Achieve 100% test coverage, 96% strategy coverage
- Update pytest.ini to include new test file
- Ensures consistency with dichotomy strategy test structure

--- a/lambda/scheduler/pytest.ini
+++ b/lambda/scheduler/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 testpaths = tests
-python_files = test_handler.py test_purchase_calculator.py test_recommendations.py test_coverage.py
+python_files = test_handler.py test_purchase_calculator.py test_recommendations.py test_coverage.py test_dichotomy_strategy.py test_simple_strategy.py
 python_classes = Test*
 python_functions = test_*
 addopts =
