feat: Add standalone cleanup script using AWS API calls
- Create TestCleanupAllOrphanedResources that finds and deletes ALL orphaned test resources
- Uses direct AWS SDK calls (not Terraform) to clean up:
  * CloudWatch Log Groups
  * Lambda Functions
  * EventBridge Rules (with target removal)
  * SQS Queues
  * SNS Topics
  * IAM Roles (with policy detachment)
  * S3 Buckets (with object/version deletion)
- Add CI workflow step to run cleanup BEFORE integration tests
- Only deletes resources matching 'sp-autopilot-test-*' pattern (production safe)
- Can be run manually: go test -v -run TestCleanupAllOrphanedResources -timeout 10m
- Update cleanup on failure step to use new comprehensive cleanup

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -484,6 +484,13 @@ jobs:
           go mod download
           go mod verify
 
+      - name: Cleanup Orphaned Resources from Previous Runs
+        working-directory: terraform-tests/integration
+        run: |
+          echo "Cleaning up any orphaned test resources from previous failed runs..."
+          go test -v -timeout 10m -run TestCleanupAllOrphanedResources || true
+          echo "Cleanup complete. Proceeding with integration tests..."
+
       - name: Run Terratest Integration Tests
         working-directory: terraform-tests/integration
         run: |
@@ -496,8 +503,8 @@ jobs:
         if: failure()
         working-directory: terraform-tests/integration
         run: |
-          echo "Cleaning up any remaining test resources..."
-          go test -v -timeout 10m -run TestCleanup || true
+          echo "Cleaning up any remaining test resources after failure..."
+          go test -v -timeout 10m -run TestCleanupAllOrphanedResources || true
 
       - name: Comment PR with Test Results
         if: github.event_name == 'pull_request' && failure()
