--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -361,9 +361,22 @@ jobs:
 
   # Stage 2: Terraform unit tests (runs after Lambda tests complete successfully)
   terraform-unit-tests:
-    name: Terraform Unit Tests
+    name: Terraform Unit Tests (${{ matrix.test_file }})
     runs-on: ubuntu-latest
     needs: [terraform-validation, tfsec-scan, lint, scheduler-tests, purchaser-tests, reporter-tests]
+
+    strategy:
+      fail-fast: false
+      matrix:
+        test_file:
+          - cloudwatch
+          - eventbridge
+          - iam
+          - s3
+          - sns
+          - sqs
+          - sqs_policy
+          - variables
 
     steps:
       - name: Checkout code
@@ -393,52 +406,30 @@ jobs:
           terraform init
           echo "✓ Terraform initialized successfully"
 
-      - name: Run Terraform Unit Tests
+      - name: Run Terraform Unit Test - ${{ matrix.test_file }}
         run: |
-          echo "Running all Terraform unit tests..."
-          terraform test -test-directory=terraform-tests/unit
+          echo "Running ${{ matrix.test_file }} tests..."
+          terraform test terraform-tests/unit/${{ matrix.test_file }}.tftest.hcl
           TEST_EXIT_CODE=$?
           echo "Test exit code: $TEST_EXIT_CODE"
 
           if [ $TEST_EXIT_CODE -eq 0 ]; then
-            echo "✅ All tests passed!"
+            echo "✅ ${{ matrix.test_file }} tests passed!"
           else
-            echo "❌ Tests failed with exit code $TEST_EXIT_CODE"
+            echo "❌ ${{ matrix.test_file }} tests failed with exit code $TEST_EXIT_CODE"
             exit $TEST_EXIT_CODE
           fi
-
-      - name: Validate Test File Structure
-        run: |
-          echo "Checking for required test files..."
-          REQUIRED_FILES=(
-            "terraform-tests/unit/s3.tftest.hcl"
-            "terraform-tests/unit/sqs.tftest.hcl"
-            "terraform-tests/unit/sns.tftest.hcl"
-            "terraform-tests/unit/iam.tftest.hcl"
-            "terraform-tests/unit/cloudwatch.tftest.hcl"
-            "terraform-tests/unit/eventbridge.tftest.hcl"
-            "terraform-tests/unit/variables.tftest.hcl"
-          )
-
-          for file in "${REQUIRED_FILES[@]}"; do
-            if [ -f "$file" ]; then
-              echo "✓ $file exists"
-            else
-              echo "✗ $file MISSING"
-              exit 1
-            fi
-          done
 
       - name: Test Summary
         if: always()
         run: |
           echo "========================================="
-          echo "Terraform Unit Tests Summary"
+          echo "Terraform Unit Test Summary: ${{ matrix.test_file }}"
           echo "========================================="
           echo "Version: $(terraform version -json | jq -r '.terraform_version')"
           echo "AWS Credentials: NOT REQUIRED ✓"
           echo "Mock Provider: ENABLED ✓"
-          echo "Test Files: $(ls -1 terraform-tests/unit/*.tftest.hcl 2>/dev/null | wc -l)"
+          echo "Test File: terraform-tests/unit/${{ matrix.test_file }}.tftest.hcl"
           echo "========================================="
 
   # Stage 3: Terraform integration tests (runs only after unit tests pass)
