fix: configure git user in auto-update workflow
- Add git config to set user.name and user.email before merge
- Fixes 'empty ident name' error when auto-merging PRs
- Uses github-actions[bot] as committer

--- a/.github/workflows/auto-update-pr.yml
+++ b/.github/workflows/auto-update-pr.yml
@@ -18,6 +18,10 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
+          # Configure git user for commits
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
           # Get all open PRs
           prs=$(gh pr list --state open --json number,headRefName --jq '.[] | "\(.number):\(.headRefName)"')
 
