fix: add write permissions to auto-update workflow
- Add permissions.contents: write to allow pushing to branches
- Add permissions.pull-requests: read to allow listing PRs
- Explicitly pass GITHUB_TOKEN to checkout action
- Set persist-credentials: true to maintain auth for push

This fixes the 403 Permission Denied error when the workflow
tries to push updated branches.

--- a/.github/workflows/auto-update-pr.yml
+++ b/.github/workflows/auto-update-pr.yml
@@ -8,11 +8,16 @@ on:
 jobs:
   auto-update-prs:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: read
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
 
       - name: Update PR branches
         env:
