auto-claude: subtask-1-2 - Add unit tests for urllib3-based notification func

--- a/lambda/shared/pytest.ini
+++ b/lambda/shared/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 testpaths = tests
-python_files = test_config_validation.py test_handler_utils.py test_email_templates.py
+python_files = test_config_validation.py test_handler_utils.py test_email_templates.py test_notifications.py
 python_classes = Test*
 python_functions = test_*
 addopts =
