Fix codecov to track shared folder coverage
Added --cov=shared to all Lambda pytest.ini files to ensure
coverage tracking for the shared/ folder. Previously, only
Lambda-specific modules were tracked, causing codecov to miss
shared folder coverage even though the code was being executed.

Changes:
- Reporter: Added --cov=shared
- Scheduler: Added --cov=shared
- Purchaser: Added --cov=shared

--- a/lambda/reporter/pytest.ini
+++ b/lambda/reporter/pytest.ini
@@ -6,6 +6,7 @@ python_functions = test_*
 addopts =
     -v
     --cov=handler
+    --cov=shared
     --cov-report=term-missing
     --cov-report=html
     --cov-report=xml
