--- a/lambda/purchaser/pytest.ini
+++ b/lambda/purchaser/pytest.ini
@@ -7,6 +7,7 @@ addopts =
     -v
     --cov=handler
     --cov=validation
+    --cov=shared
     --cov-report=term-missing
     --cov-report=html
     --cov-report=xml
