--- a/lambda/purchaser/pytest.ini
+++ b/lambda/purchaser/pytest.ini
@@ -5,9 +5,7 @@ python_classes = Test*
 python_functions = test_*
 addopts =
     -v
-    --cov=handler
-    --cov=validation
-    --cov=shared
+    --cov=.
     --cov-report=term-missing
     --cov-report=html
     --cov-report=xml
