--- a/lambda/scheduler/.coveragerc
+++ b/lambda/scheduler/.coveragerc
@@ -1,5 +1,6 @@
 [run]
 source = .
+relative_files = True
 omit =
     tests/*
     */tests/*
@@ -17,7 +18,6 @@ omit =
     */tests/*
     test_*.py
     */test_*.py
-    shared/*
 
 exclude_lines =
     pragma: no cover
