Restore original pytest coverage scopes
Reverted to original --cov settings to preserve existing test thresholds:
- Reporter: --cov=handler (was --cov=.)
- Purchaser: --cov=handler --cov=validation (was --cov=.)
- Scheduler: --cov=. (unchanged)

The .coveragerc relative_files=True setting enables codecov to aggregate
coverage across Lambda tests, including shared folder coverage.

--- a/lambda/purchaser/pytest.ini
+++ b/lambda/purchaser/pytest.ini
@@ -5,7 +5,8 @@ python_classes = Test*
 python_functions = test_*
 addopts =
     -v
-    --cov=.
+    --cov=handler
+    --cov=validation
     --cov-report=term-missing
     --cov-report=html
     --cov-report=xml
