Show all strategies in scheduler preview with strategy-specific defaults
Changes:
- Display all 3 strategies (Fixed, Dichotomy, Follow AWS) in comparison table
- Highlight the configured strategy with 'CONFIGURED' badge
- Use strategy-specific defaults for non-configured strategies:
  - Fixed: max 10%, target 90% (conservative)
  - Dichotomy: max 50%, min 1%, target 90% (aggressive)
  - Follow AWS: uses AWS recommendations
- Fix Follow AWS to calculate purchase % and projected coverage
- Show strategy parameters in descriptions
- Update tests to verify all strategies are displayed

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -163,7 +163,16 @@
                 "LOW_UTILIZATION_THRESHOLD": "70",
                 "LOW_UTILIZATION_ALERT_ENABLED": "false",
                 // Debug data
-                "INCLUDE_DEBUG_DATA": "true"
+                "INCLUDE_DEBUG_DATA": "true",
+                // Scheduler strategy (for preview simulation)
+                "PURCHASE_STRATEGY_TYPE": "fixed",
+                "MAX_PURCHASE_PERCENT": "10",
+                "MIN_PURCHASE_PERCENT": "1",
+                "COMPUTE_SP_TERM": "THREE_YEAR",
+                "COMPUTE_SP_PAYMENT_OPTION": "ALL_UPFRONT",
+                "DATABASE_SP_PAYMENT_OPTION": "NO_UPFRONT",
+                "SAGEMAKER_SP_TERM": "THREE_YEAR",
+                "SAGEMAKER_SP_PAYMENT_OPTION": "ALL_UPFRONT"
             },
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}/lambda/reporter"
