Fix SonarCloud code quality issues (#107)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.links.issue=https://github.com/etiennechabert/terraform-aws-sp-autopilot/i
 sonar.links.scm=https://github.com/etiennechabert/terraform-aws-sp-autopilot
 
 # Source code paths
-sonar.sources=lambda,*.tf
+sonar.sources=.
 
 # Test paths (excluded from analysis)
 sonar.tests=lambda/scheduler/tests,lambda/purchaser/tests,lambda/reporter/tests
@@ -51,7 +51,8 @@ sonar.coverage.exclusions=\
   **/*_test.py,\
   lambda/scheduler/tests/**,\
   lambda/purchaser/tests/**,\
-  lambda/reporter/tests/**
+  lambda/reporter/tests/**,\
+  lambda/local_runner.py
 
 # Duplicate detection
 sonar.cpd.exclusions=\
